# leddit-platform

./: .gitignore  Makefile  README.md  docker-compose.yml
api-gateway/: api-gateway-README.md  docker-compose.yml
api-gateway/apisix/: apisix.yaml  config.yaml
diagrams/: docker-compose.yml
diagrams/structurizr/: workspace.dsl
frontend/: Dockerfile  README.md  package.json
frontend/src/: App.tsx  main.tsx  theme.ts
keycloak/: .env.example  README.md  docker-compose.yml  makefile
keycloak/scripts/: init-keycloak.sh
keycloak/terraform/: leddit-realm.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
login_service/: .env.example  dockerfile  requirements.txt
login_service/app/: config.py  db.py  main.py  models.py  security.py
post_service/: .env.example  README.md  docker-compose.yml  pyproject.toml
post_service/app/: config.py  controller.py  db.py  main.py  models.py  post_repository.py  post_service.py  schemas.py
rabbitmq/: docker-compose.yml  rabbit.md
services/comment-service/: .envexample  README.md  docker-compose.yml  pytest.ini  requirements.txt
services/community-service/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
services/community-service/app/: config.py  database.py  exceptions.py  main.py  models.py  repository.py  router.py  schemas.py  service.py
services/community-service/app/grpc/: community.proto  community_pb2.py  community_pb2_grpc.py
services/post_service/: Dockerfile  (+1 more)
structurizr/: docs.md  workspace.dsl  workspace.json
verify_service/: .env.example  dockerfile  requirements.txt
(+25 files in other folders)
