[project]
name = "community-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.136.1",
  "grpcio>=1.80.0",
  "grpcio-tools>=1.80.0",
  "protobuf>=6.33.6",
  "pydantic>=2.13.3",
  "pydantic-settings>=2.14.0",
  "sqlalchemy[asyncio]>=2.0.49",
  "uvicorn>=0.46.0",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=9.0.3", "pytest-asyncio>=1.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
