[project]
name = "community-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.4",
  "fastapi>=0.136.1",
  "psycopg2-binary>=2.9.12",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.0",
  "sqlalchemy>=2.0.49",
  "uvicorn>=0.46.0",
]
